# geobox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  geobox.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
imgui-glfw-opengl3-master-4a2426449a4c65028c65c68ed9426495dec251e4/: CMakeLists.txt
src/: CMakeLists.txt  bvh.cpp  bvh.hpp  common.cpp  common.hpp  geobox.cpp  geobox_app.cpp  geobox_app.hpp  geobox_exceptions.hpp  indexed_triangle_mesh_object.cpp  indexed_triangle_mesh_object.hpp  intersection.cpp  intersection.hpp  main.cpp  mat4x4f.hpp  math.cpp  math.hpp  mesh_object.cpp  mesh_object.hpp  object.cpp  object.hpp  orbit_camera.cpp  orbit_camera.hpp  point_cloud.cpp  point_cloud.hpp  point_cloud_object.cpp  point_cloud_object.hpp  primitives.cpp  primitives.hpp  random_generator.hpp  ray.hpp  ray_aabb_intersection.cpp  ray_aabb_intersection.hpp  ray_triangle_intersection.cpp  ray_triangle_intersection.hpp  read_stl.cpp  read_stl.hpp  shader.cpp  shader.hpp  testing.hpp  (+2 more)
src/resources/shaders/: default.frag  default.vert  phong.frag  phong.vert  point_cloud.frag  point_cloud.vert  unlit.vert
src/shaders/: default.vert
test_meshes/: bunny.stl  cube.stl
test_stl_files/: bunny.stl.LICENSE
